# pySavitarLE

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py
.github/workflows/: conan-package.yml  update-fork.yml
python/: MeshData.sip  MetadataEntry.sip  Scene.sip  SceneNode.sip  Types.sip  pySavitar.sip
test_package/: conanfile.py  test.py
